--- a/storage.html
+++ b/storage.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Storage</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="app.js"></script>
+    <h1 class="titulo">Storage</h1>
+
+    <table class="table"></table>
+
+    <input
+      type="button"
+      class="btn"
+      value="Register"
+      onclick="location.href='index.html';"
+    />
+
+    <script src="storage.js"></script>
   </body>
 </html>
