--- a/storage.html
+++ b/storage.html
@@ -10,14 +10,16 @@
   <body>
     <h1 class="titulo">Storage</h1>
 
-    <table class="table"></table>
+    <div class="menu">
+      <table class="table"></table>
 
-    <input
-      type="button"
-      class="btn"
-      value="Register"
-      onclick="location.href='index.html';"
-    />
+      <input
+        type="button"
+        class="btn"
+        value="Home"
+        onclick="location.href='index.html';"
+      />
+    </div>
 
     <script src="storage.js"></script>
   </body>
