--- a/after.html
+++ b/after.html
@@ -13,7 +13,7 @@
       <input
         type="button"
         class="btn"
-        value="Register"
+        value="Home"
         onclick="location.href='index.html';"
       />
       <input
